<resources>
    <string name="app_name">Delivery Ya</string>

    <string name="texto_landing">Descubre restaurantes cerca tuyo</string>
    <string name="boton_continuar">Continuar</string>


    <string name="nombre_usuario">Nombre:</string>
    <string name="apellido_usuario">Apellido:</string>
    <string name="mail_user">Email:</string>
    <string name="email_usuario">Email</string>

    <string name="titulo_mapa">Ubicacion de restaurantes</string>

    <string name="placeholder_nombre">Nombre</string>
    <string name="placeholder_apellido">Apellido</string>
    <string name="placeholder_correo_elecronico">Email</string>
    <string name="placeholder_password">Contraseña</string>
    <string name="usuario_recien_registrado">Login</string>
    <string name="registrarse">Registrate ahora</string>

    <string name="boton_cargar_imagen">Cargar imagen</string>

    <string name="buscador">¿Qué estás buscando?</string>
    <string name="titulo_menu">Ordene su comida aqui</string>
    <string name="boton_postres">Postres</string>
    <string name="boton_pizzas">Pizzas</string>
    <string name="boton_hamburguesas">Hamburgesas</string>
    <string name="boton_parrillas">Parrillas</string>
    <string name="boton_helados">Helados</string>
    <string name="boton_panaderia">Panaderia</string>
    <string name="urlMenuHamburguesa">https://cdn-icons-png.flaticon.com/512/6499/6499731.png</string>


    <string name="boton_comprar">Comprar</string>

    <string name="boton_menos">-</string>
    <string name="boton_mas">+</string>
    <string name="contador_valor_defecto">0</string>

    <string name="precio_defecto">0</string>
    <string name="precio_total">Precio total</string>

    <!-- POSTRES -->
    <string name="boton_helado_vainilla">Helado de vainilla</string>
    <string name="descripcion_helado_vainilla">Elegancia en cada bocado, un kilo de suavidad atemporal.</string>
    <string name="precio_helado_vainilla">1000</string>
    <string name="descripcion_imagen_helado_vainilla">Helado de vainilla</string>

    <string name="boton_helado_chocolate">Helado de chocolate</string>
    <string name="descripcion_helado_chocolate">Indulgencia en cada cucharada, un kilo de suave chocolate.</string>
    <string name="precio_helado_chocolate">1300</string>
    <string name="descripcion_imagen_helado_chocolate">Helado de chocolate</string>

    <string name="boton_tiramisu">Tiramisu</string>
    <string name="descripcion_tiramisu">Descripcion de tiramisu</string>
    <string name="precio_tiramisuo">1700</string>


    <string name="boton_helado_frutilla">Helado de frutilla</string>
    <string name="descripcion_helado_frutilla">Un kilo de pura frescura frutal.</string>
    <string name="precio_helado_frutilla">1200</string>
    <string name="descripcion_imagen_helado_frutilla">Helado de frutilla</string>

    <string name="boton_helado_limon">Helado de limon</string>
    <string name="descripcion_helado_limon">Un kilo de explosión cítrica refrescante.</string>
    <string name="precio_helado_limon">1300</string>
    <string name="descripcion_imagen_helado_limon">Helado de limon</string>


    <string name="title_home">Inicio</string>
    <string name="title_dashboard">Tablero</string>
    <string name="title_notifications">Notificaciones</string>
    <string name="title_activity_carrito_compras">CarritoCompras</string>
</resources>