<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/layoutHeader"
        android:layout_width="409dp"
        android:layout_height="33dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="24dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/layoutBuscador"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img_burgermenu"
            android:layout_marginStart="8dp"
            android:layout_width="25dp"
            android:layout_height="33dp"
            android:layout_weight="1"
            android:contentDescription="Burger Menu"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/img_cart"
            android:layout_width="25dp"
            android:layout_height="33dp"
            android:layout_weight="1"
            android:src="@drawable/cart" />

    </LinearLayout>

    <TableLayout
        android:id="@+id/layoutCategorias"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/tvTituloMenu">

        <!-- Fila 1 -->
        <TableRow
            android:id="@+id/trCategorias1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <!-- Botón 1 en la fila 1 -->
            <ImageButton
                android:id="@+id/btn_postres"
                android:layout_width="180dp"
                android:layout_height="100dp"
                android:layout_centerInParent="true"
                android:background="@drawable/rounded_button"
                android:src="@drawable/img_postres"
                android:contentDescription="@string/boton_postres"
                android:scaleType="fitCenter" />

            <!-- Botón 2 en la fila 1 -->
            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <ImageButton
                android:id="@+id/btn_pizzas"
                android:layout_width="180dp"
                android:layout_height="100dp"
                android:layout_centerInParent="true"
                android:background="@drawable/rounded_button"
                android:src="@drawable/img_pizza"
                android:contentDescription="@string/boton_pizzas"
                android:scaleType="fitCenter" />
        </TableRow>
        <!-- Fila 2 -->
        <TableRow
            android:id="@+id/trCategorias2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <!-- Botón 1 en la fila 1 -->
            <ImageButton
                android:id="@+id/btn_parrillas"
                android:layout_width="180dp"
                android:layout_height="100dp"
                android:layout_centerInParent="true"
                android:background="@drawable/rounded_button"
                android:src="@drawable/img_parrillas"
                android:contentDescription="@string/boton_parrillas"
                android:scaleType="fitCenter" />

            <!-- Botón 2 en la fila 1 -->
            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <ImageButton
                android:id="@+id/btn_hamburguesa"
                android:layout_width="180dp"
                android:layout_height="100dp"
                android:layout_centerInParent="true"
                android:background="@drawable/rounded_button"
                android:src="@drawable/img_hamburguesas"
                android:contentDescription="@string/boton_hamburguesas"
                android:scaleType="fitCenter" />
        </TableRow>
        <!-- Fila 3 -->
        <TableRow
            android:id="@+id/trCategorias3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <!-- Botón 1 en la fila 1 -->
            <ImageButton
                android:id="@+id/btn_panaderias"
                android:layout_width="180dp"
                android:layout_height="100dp"
                android:layout_centerInParent="true"
                android:background="@drawable/rounded_button"
                android:src="@drawable/img_panaderia"
                android:contentDescription="@string/boton_panaderia"
                android:scaleType="fitCenter" />

            <!-- Botón 2 en la fila 1 -->
            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <ImageButton
                android:id="@+id/btn_helados"
                android:layout_width="180dp"
                android:layout_height="100dp"
                android:layout_centerInParent="true"
                android:background="@drawable/rounded_button"
                android:src="@drawable/img_helados"
                android:contentDescription="@string/boton_helados"
                android:scaleType="fitCenter" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:id="@+id/layoutBuscador"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutHeader">

        <FrameLayout
            android:id="@+id/flBuscador"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#5BB0A9AB">

            <EditText
                android:id="@+id/etBuscador"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/transparent"
                android:enabled="false"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="¿Qué estás buscando?"
                android:inputType="none"
                android:minHeight="48dp"
                android:textAlignment="center"
                android:textSize="15sp" />

        </FrameLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tvTituloMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="46dp"
        android:text="@string/titulo_menu"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/layoutCategorias"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutBuscador" />

    <!-- Footer -->

    <LinearLayout
        android:id="@+id/layoutPrecioTotal"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutCategorias">

        <TextView
            android:id="@+id/txtPrecioTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="   Usuario:"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="32dp"/>

        <ImageView
            android:id="@+id/iconoUser"
            android:layout_width="25dp"
            android:layout_height="33dp"
            android:layout_weight="1"
            android:src="@drawable/user"
            android:layout_marginStart="0dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp">
        </ImageView>

        <ImageView
            android:id="@+id/imgPrueba"
            android:layout_width="59dp"
            android:layout_height="match_parent"
         />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>