<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registro">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="120dp">

            <!-- Elemento de logo -->
            <ImageView
                android:id="@+id/logoImageView1"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/logo"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="15dp" />

            <TextView
                android:id="@+id/appNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Delivery Ya"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp" />

            <!-- "Inicia sesión para continuar" con margen inferior -->
            <TextView
                android:id="@+id/instructionTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Inicia sesión para continuar"
                android:textSize="18sp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="35dp" />

            <!-- Email -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/placeholder_correo_elecronico" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Contraseña -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/placeholder_password" />

            </com.google.android.material.textfield.TextInputLayout>

            <ProgressBar
                android:id="@+id/progressBarRegistro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <Button
                android:id="@+id/btnRegistro"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp"
                android:background="@color/color_principal"
                android:text="Registrar"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/txtLoginAhora"
                android:text="@string/usuario_recien_registrado"
                android:layout_width="match_parent"
                android:layout_height="match_parent"></TextView>
        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
